Fix spacing

--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 .navbar {
-  display: block;
+  display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        flex-wrap: wrap;
   background-color: #333;
   overflow: hidden;
   position: fixed;
